--- a/.web/package.json
+++ b/.web/package.json
@@ -6,30 +6,38 @@
     "prod": "next start"
   },
   "dependencies": {
-    "@chakra-ui/icons": "1.1.7",
-    "@chakra-ui/react": "1.8.8",
-    "@chakra-ui/system": "1.12.1",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
-    "axios": "^0.27.2",
+    "@chakra-ui/icons": "^2.0.19",
+    "@chakra-ui/react": "^2.6.0",
+    "@chakra-ui/system": "^2.5.6",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "axios": "^1.4.0",
+    "chakra-react-select": "^4.6.0",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^6.3.3",
-    "gridjs": "^4.0.0",
-    "gridjs-react": "^4.0.0",
-    "next": "^12.1.0",
-    "plotly.js": "2.6.4",
-    "prettier": "^2.8.1",
-    "react": "^17.0.2",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-dom": "^17.0.2",
-    "react-markdown": "^8.0.3",
+    "framer-motion": "^10.12.4",
+    "gridjs": "^6.0.6",
+    "universal-cookie": "^4.0.4",
+    "gridjs-react": "^6.0.1",
+    "json5": "^2.2.3",
+    "next": "^13.3.1",
+    "plotly.js": "^2.22.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
+    "react-markdown": "^8.0.7",
+    "react-player": "^2.12.0",
     "react-plotly.js": "^2.6.0",
     "react-syntax-highlighter": "^15.5.0",
-    "reconnecting-websocket": "^4.4.0",
-    "rehype-katex": "^6.0.2",
+    "rehype-katex": "^6.0.3",
     "rehype-raw": "^6.1.1",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
+    "socket.io-client": "^4.6.1",
     "victory": "^36.6.8"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
